2005-02-13  Anthony Green  <green@redhat.com>

	* jni.cc (nathash_add): Don't strdup the method signature.
	(_Jv_JNI_RegisterNatives): Convert the slashes to dots in the
	method signature.
	Update copyright.

2005-02-12  Mark Wielaard  <mark@klomp.org>

	Fixes bug libgcj/8170
	* java/lang/ClassLoader.java (loadClass): Don't rewrap
	ClassNotFoundException.
	* gnu/java/lang/MainThread.java (run): Chain NoClassDefFoundError.
	* gnu/gcj/runtime/NameFinder.java (remove_interpreter): Removed.
	(remove_internal): New field superceding remove_interpreter.
	(sanitizeStack): Remove all no-package classes starting with "_Jv_".
	Remove no-class methods starting with "_Jv_". And Replace null
	class or method names with the empty string. Stop at either the
	MainThread or a real Thread run() method.
	(newElement): Made static.
	* java/net/URLClassLoader.java (findClass): Throw
	ClassNotFoundExceptions including urls, plus parent using toString().
	(thisString): New field.
	(toString): New method.

2005-02-10  Tom Tromey  <tromey@redhat.com>

	* external/sax/Makefile.in: Rebuilt.
	* external/sax/Makefile.am (all-local): Removed.
	(BUILT_SOURCES): New variable.
	(mostlyclean-local): No error if no classes to delete.
	* external/w3c_dom/Makefile.in: Rebuilt.
	* external/w3c_dom/Makefile.am (all-local): Removed.
	(BUILT_SOURCES): New variable.
	(mostlyclean-local): No error if no classes to delete.

2005-02-10  Bryce McKinlay  <mckinlay@redhat.com>

	* testsuite/libjava.mauve/xfails: Updated to reflect current state 
	of mauve and libjava.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* gnu/java/net/protocol/jar/Connection.java (getJarFile): Open
	jar file with OPEN_DELETE.
	* java/util/zip/ZipFile.java (ZipFile): Call deleteOnExit when
	OPEN_DELETE is used.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* java/util/zip/InflaterInputStream.java (markSupported):
	Override.
	(mark, reset): Likewise.

2005-02-08  Tom Tromey  <tromey@redhat.com>
